@@ -187,6 +187,8 @@ RewriteRule  ^/webdav /cgi-bin/webdavwrapper  [PT,E=WEBDAVCONF:/path/to/my/confi
 <li> <code>$ENABLE_SYSINFO</code> was removed: add <code>'SysInfo'</code> to the <code>@EXTENSIONS</code> list</li>
 <li> <code>$ENABLE_PROPERTIES_VIEWER</code> was removed: add <code>'PropertiesViewer'</code> to the <code>@EXTENSIONS</code> list</li>
 <li> <code>$ENABLE_SIDEBAR</code> was removed: use <code>@SUPPORTED_VIEWS</code> instead</li>
+<li> <code>$MAXLASTMODIFIEDSIZE</code> was removed</li>
+<li> <code>$MAXNAVPATHSIZE</code> was added</li>
 </ol>
 <h3>Upgrading from &le;0.6.x to &ge;0.7.x</h3>
 <ol>
